--- a/catalog.html
+++ b/catalog.html
@@ -52,7 +52,7 @@
                <!-- top-header__column -->
 
                <div class="top-header__column top-header__column_logo">
-                  <a href="" class="top-header__logo">
+                  <a href="index.html" class="top-header__logo">
                      <picture>
                         <source srcset="img/logo.webp" type="image/webp"><img src="img/logo.png" alt=""></picture>
                   </a>
@@ -151,7 +151,7 @@
                                        <div class="item-product__labels">
                                           <div class="item-product__label">Товар дня</div>
                                        </div>
-                                       <a href="" class="item-product__image">
+                                       <a href="product.html" class="item-product__image">
                                           <picture>
                                              <source srcset="img/products/01.webp" type="image/webp"><img src="img/products/01.jpg" alt=""></picture>
                                        </a>
@@ -188,7 +188,7 @@
                                        <div class="item-product__labels">
                                           <div class="item-product__label">Товар дня</div>
                                        </div>
-                                       <a href="" class="item-product__image">
+                                       <a href="product.html" class="item-product__image">
                                           <picture>
                                              <source srcset="img/products/01.webp" type="image/webp"><img src="img/products/01.jpg" alt=""></picture>
                                        </a>
@@ -226,7 +226,7 @@
                                     <div class="item-product">
                                        <div class="item-product__labels">
                                        </div>
-                                       <a href="" class="item-product__image">
+                                       <a href="product.html" class="item-product__image">
                                           <picture>
                                              <source srcset="img/products/01.webp" type="image/webp"><img src="img/products/01.jpg" alt=""></picture>
                                        </a>
@@ -264,7 +264,7 @@
                                     <div class="item-product">
                                        <div class="item-product__labels">
                                        </div>
-                                       <a href="" class="item-product__image">
+                                       <a href="product.html" class="item-product__image">
                                           <picture>
                                              <source srcset="img/products/01.webp" type="image/webp"><img src="img/products/01.jpg" alt=""></picture>
                                        </a>
@@ -302,7 +302,7 @@
                                        <div class="item-product__labels">
                                           <div class="item-product__label">Товар дня</div>
                                        </div>
-                                       <a href="" class="item-product__image">
+                                       <a href="product.html" class="item-product__image">
                                           <picture>
                                              <source srcset="img/products/01.webp" type="image/webp"><img src="img/products/01.jpg" alt=""></picture>
                                        </a>
@@ -849,7 +849,7 @@
                   <div class="catalog__products items-products">
                      <div class="items-products__column">
                         <div class="item-product">
-                           <a href="" class="item-product__image">
+                           <a href="product.html" class="item-product__image">
                               <picture>
                                  <source srcset="img/products/001.webp" type="image/webp"><img src="img/products/001.jpg" alt=""></picture>
                            </a>
@@ -905,7 +905,7 @@
                      </div>
                      <div class="items-products__column">
                         <div class="item-product">
-                           <a href="" class="item-product__image">
+                           <a href="product.html" class="item-product__image">
                               <picture>
                                  <source srcset="img/products/002.webp" type="image/webp"><img src="img/products/002.jpg" alt=""></picture>
                            </a>
@@ -956,7 +956,7 @@
                      </div>
                      <div class="items-products__column">
                         <div class="item-product">
-                           <a href="" class="item-product__image">
+                           <a href="product.html" class="item-product__image">
                               <picture>
                                  <source srcset="img/products/001.webp" type="image/webp"><img src="img/products/001.jpg" alt=""></picture>
                            </a>
@@ -1007,7 +1007,7 @@
                      </div>
                      <div class="items-products__column">
                         <div class="item-product">
-                           <a href="" class="item-product__image">
+                           <a href="product.html" class="item-product__image">
                               <picture>
                                  <source srcset="img/products/001.webp" type="image/webp"><img src="img/products/001.jpg" alt=""></picture>
                            </a>
@@ -1058,7 +1058,7 @@
                      </div>
                      <div class="items-products__column">
                         <div class="item-product">
-                           <a href="" class="item-product__image">
+                           <a href="product.html" class="item-product__image">
                               <picture>
                                  <source srcset="img/products/002.webp" type="image/webp"><img src="img/products/002.jpg" alt=""></picture>
                            </a>
@@ -1109,7 +1109,7 @@
                      </div>
                      <div class="items-products__column">
                         <div class="item-product">
-                           <a href="" class="item-product__image">
+                           <a href="product.html" class="item-product__image">
                               <picture>
                                  <source srcset="img/products/001.webp" type="image/webp"><img src="img/products/001.jpg" alt=""></picture>
                            </a>
@@ -1160,7 +1160,7 @@
                      </div>
                      <div class="items-products__column">
                         <div class="item-product">
-                           <a href="" class="item-product__image">
+                           <a href="product.html" class="item-product__image">
                               <picture>
                                  <source srcset="img/products/001.webp" type="image/webp"><img src="img/products/001.jpg" alt=""></picture>
                            </a>
@@ -1211,7 +1211,7 @@
                      </div>
                      <div class="items-products__column">
                         <div class="item-product">
-                           <a href="" class="item-product__image">
+                           <a href="product.html" class="item-product__image">
                               <picture>
                                  <source srcset="img/products/002.webp" type="image/webp"><img src="img/products/002.jpg" alt=""></picture>
                            </a>
@@ -1262,7 +1262,7 @@
                      </div>
                      <div class="items-products__column">
                         <div class="item-product">
-                           <a href="" class="item-product__image">
+                           <a href="product.html" class="item-product__image">
                               <picture>
                                  <source srcset="img/products/001.webp" type="image/webp"><img src="img/products/001.jpg" alt=""></picture>
                            </a>
