--- a/checkout.html
+++ b/checkout.html
@@ -51,7 +51,7 @@
                <!-- top-header__column -->
 
                <div class="top-header__column top-header__column_logo">
-                  <a href="" class="top-header__logo">
+                  <a href="index.html" class="top-header__logo">
                      <picture>
                         <source srcset="img/logo.webp" type="image/webp"><img src="img/logo.png" alt=""></picture>
                   </a>
@@ -62,14 +62,14 @@
                   <div class="top-header__contacts contacts-header">
                      <div class="contacts-header__column">
                         <div class="contacts-header__item contacts-header__item_icon">
-                           <div class="contacts-header__div">Москва</div>
+                           <div class="contacts-header__label">Москва</div>
                            <a href="tel:84991234567" class="contacts-header__phone">8-499-123-45-67</a>
 
                         </div>
                      </div>
                      <div class="contacts-header__column contacts-header__column_forcart">
                         <div class="contacts-header__item">
-                           <div class="contacts-header__div">Бесплатно для России</div>
+                           <div class="contacts-header__label">Бесплатно для России</div>
                            <a href="tel:84991234567" class="contacts-header__phone contacts-header__phone_icon">8-800-123-45-67</a>
 
                         </div>
@@ -150,7 +150,7 @@
                                        <div class="item-product__divs">
                                           <div class="item-product__div">Товар дня</div>
                                        </div>
-                                       <a href="" class="item-product__image">
+                                       <a href="product.html" class="item-product__image">
                                           <picture>
                                              <source srcset="img/products/01.webp" type="image/webp"><img src="img/products/01.jpg" alt=""></picture>
                                        </a>
@@ -187,7 +187,7 @@
                                        <div class="item-product__divs">
                                           <div class="item-product__div">Товар дня</div>
                                        </div>
-                                       <a href="" class="item-product__image">
+                                       <a href="product.html" class="item-product__image">
                                           <picture>
                                              <source srcset="img/products/01.webp" type="image/webp"><img src="img/products/01.jpg" alt=""></picture>
                                        </a>
@@ -225,7 +225,7 @@
                                     <div class="item-product">
                                        <div class="item-product__divs">
                                        </div>
-                                       <a href="" class="item-product__image">
+                                       <a href="product.html" class="item-product__image">
                                           <picture>
                                              <source srcset="img/products/01.webp" type="image/webp"><img src="img/products/01.jpg" alt=""></picture>
                                        </a>
@@ -263,7 +263,7 @@
                                     <div class="item-product">
                                        <div class="item-product__divs">
                                        </div>
-                                       <a href="" class="item-product__image">
+                                       <a href="product.html" class="item-product__image">
                                           <picture>
                                              <source srcset="img/products/01.webp" type="image/webp"><img src="img/products/01.jpg" alt=""></picture>
                                        </a>
@@ -301,7 +301,7 @@
                                        <div class="item-product__divs">
                                           <div class="item-product__div">Товар дня</div>
                                        </div>
-                                       <a href="" class="item-product__image">
+                                       <a href="product.html" class="item-product__image">
                                           <picture>
                                              <source srcset="img/products/01.webp" type="image/webp"><img src="img/products/01.jpg" alt=""></picture>
                                        </a>
@@ -337,7 +337,7 @@
                      <a href="" class="news-side__title side-title">Новости</a>
                      <div class="news-side__items">
                         <div class="news-side__item">
-                           <a href="" class="news-side__div side-div">Снижение цен на игровые площадки
+                           <a href="" class="news-side__label side-label">Снижение цен на игровые площадки
 										Jungle Gym</a>
                            <div class="news-side__body">
 
@@ -349,7 +349,7 @@
                            </div>
                         </div>
                         <div class="news-side__item">
-                           <a href="" class="news-side__div">Поступление батутов Eclipse!</a>
+                           <a href="" class="news-side__label">Поступление батутов Eclipse!</a>
                            <div class="news-side__body">
 
                               <div class="news-side__date"><span>19</span> авг
@@ -561,7 +561,7 @@
                            <div class="form-checkout__column">
 
                               <div class="form-checkout__line">
-                                 <div class="form-checkout__div">Имя: <span>*</span></div>
+                                 <div class="form-checkout__label">Имя: <span>*</span></div>
                                  <div class="form-checkout__input">
                                     <input autocomplete="off" type="text" class="input">
                                  </div>
@@ -570,7 +570,7 @@
                                  </div>
                               </div>
                               <div class="form-checkout__line">
-                                 <div class="form-checkout__div">Моб. телефон: <span>*</span>
+                                 <div class="form-checkout__label">Моб. телефон: <span>*</span>
 
                                  </div>
                                  <div class="form-checkout__input">
@@ -581,7 +581,7 @@
                                  </div>
                               </div>
                               <div class="form-checkout__line">
-                                 <div class="form-checkout__div">Ваш E-mail:</div>
+                                 <div class="form-checkout__label">Ваш E-mail:</div>
                                  <div class="form-checkout__input">
                                     <input type="text" class="input">
                                  </div>
@@ -590,13 +590,7 @@
                                  </div>
                               </div>
 
-                              <div class="form-checkout__line">
-                                 <div class="checkbox form-checkout__check">
-                                    <input type="checkbox" class="checkbox__input">
-                                    <div class="checkbox__elem"></div>
-                                    <span class="checkbox__text">Подписаться на новости и скидки</span>
-                                 </div>
-                              </div>
+
 
                            </div>
 
@@ -606,7 +600,7 @@
                      <div class="tabs__content" data-tabs-target="moscow">
                         <div class="content">
                            <div class="form-checkout__line">
-                              <div class="form-checkout__div">Имя: <span>*</span></div>
+                              <div class="form-checkout__label">Имя: <span>*</span></div>
                               <div class="form-checkout__input">
                                  <input autocomplete="off" type="text" class="input">
                               </div>
@@ -615,7 +609,7 @@
                               </div>
                            </div>
                            <div class="form-checkout__line">
-                              <div class="form-checkout__div">Моб. телефон: <span>*</span>
+                              <div class="form-checkout__label">Моб. телефон: <span>*</span>
 
                               </div>
                               <div class="form-checkout__input">
@@ -626,7 +620,7 @@
                               </div>
                            </div>
                            <div class="form-checkout__line">
-                              <div class="form-checkout__div">Ваш E-mail:</div>
+                              <div class="form-checkout__label">Ваш E-mail:</div>
                               <div class="form-checkout__input">
                                  <input type="text" class="input">
                               </div>
@@ -635,19 +629,13 @@
                               </div>
                            </div>
 
-                           <div class="form-checkout__line">
-                              <div class="checkbox form-checkout__check">
-                                 <input type="checkbox" class="checkbox__input">
-                                 <div class="checkbox__elem"></div>
-                                 <span class="checkbox__text">Подписаться на новости и скидки</span>
-                              </div>
-                           </div>
+
                         </div>
                      </div>
                      <div class="tabs__content" data-tabs-target="region">
                         <div class="content">
                            <div class="form-checkout__line">
-                              <div class="form-checkout__div">Имя: <span>*</span></div>
+                              <div class="form-checkout__label">Имя: <span>*</span></div>
                               <div class="form-checkout__input">
                                  <input autocomplete="off" type="text" class="input">
                               </div>
@@ -656,7 +644,7 @@
                               </div>
                            </div>
                            <div class="form-checkout__line">
-                              <div class="form-checkout__div">Моб. телефон: <span>*</span>
+                              <div class="form-checkout__label">Моб. телефон: <span>*</span>
 
                               </div>
                               <div class="form-checkout__input">
@@ -667,7 +655,7 @@
                               </div>
                            </div>
                            <div class="form-checkout__line">
-                              <div class="form-checkout__div">Ваш E-mail:</div>
+                              <div class="form-checkout__label">Ваш E-mail:</div>
                               <div class="form-checkout__input">
                                  <input type="text" class="input">
                               </div>
@@ -678,7 +666,7 @@
 
 
                            <div class="form-checkout__line">
-                              <div class="form-checkout__div">Индекс <span>*</span>
+                              <div class="form-checkout__label">Индекс <span>*</span>
 
                               </div>
                               <div class="form-checkout__input">
@@ -687,7 +675,7 @@
 
                            </div>
                            <div class="form-checkout__line">
-                              <div class="form-checkout__div">Город <span>*</span>
+                              <div class="form-checkout__label">Город <span>*</span>
 
                               </div>
                               <div class="form-checkout__input">
@@ -696,7 +684,7 @@
 
                            </div>
                            <div class="form-checkout__line">
-                              <div class="form-checkout__div">Адрес<span>*</span> доставки
+                              <div class="form-checkout__label">Адрес<span>*</span> доставки
 
                               </div>
                               <div class="form-checkout__input">
@@ -704,13 +692,7 @@
                               </div>
 
                            </div>
-                           <div class="form-checkout__line">
-                              <div class="checkbox form-checkout__check">
-                                 <input type="checkbox" class="checkbox__input">
-                                 <div class="checkbox__elem"></div>
-                                 <span class="checkbox__text">Подписаться на новости и скидки</span>
-                              </div>
-                           </div>
+
                         </div>
                      </div>
                   </div>
