--- a/product.html
+++ b/product.html
@@ -53,7 +53,7 @@
                <!-- top-header__column -->
 
                <div class="top-header__column top-header__column_logo">
-                  <a href="" class="top-header__logo">
+                  <a href="index.html" class="top-header__logo">
                      <picture>
                         <source srcset="img/logo.webp" type="image/webp"><img src="img/logo.png" alt=""></picture>
                   </a>
@@ -152,7 +152,7 @@
                                        <div class="item-product__labels">
                                           <div class="item-product__label">Товар дня</div>
                                        </div>
-                                       <a href="" class="item-product__image">
+                                       <a href="product.html" class="item-product__image">
                                           <picture>
                                              <source srcset="img/products/01.webp" type="image/webp"><img src="img/products/01.jpg" alt=""></picture>
                                        </a>
@@ -189,7 +189,7 @@
                                        <div class="item-product__labels">
                                           <div class="item-product__label">Товар дня</div>
                                        </div>
-                                       <a href="" class="item-product__image">
+                                       <a href="product.html" class="item-product__image">
                                           <picture>
                                              <source srcset="img/products/01.webp" type="image/webp"><img src="img/products/01.jpg" alt=""></picture>
                                        </a>
@@ -227,7 +227,7 @@
                                     <div class="item-product">
                                        <div class="item-product__labels">
                                        </div>
-                                       <a href="" class="item-product__image">
+                                       <a href="product.html" class="item-product__image">
                                           <picture>
                                              <source srcset="img/products/01.webp" type="image/webp"><img src="img/products/01.jpg" alt=""></picture>
                                        </a>
@@ -265,7 +265,7 @@
                                     <div class="item-product">
                                        <div class="item-product__labels">
                                        </div>
-                                       <a href="" class="item-product__image">
+                                       <a href="product.html" class="item-product__image">
                                           <picture>
                                              <source srcset="img/products/01.webp" type="image/webp"><img src="img/products/01.jpg" alt=""></picture>
                                        </a>
@@ -303,7 +303,7 @@
                                        <div class="item-product__labels">
                                           <div class="item-product__label">Товар дня</div>
                                        </div>
-                                       <a href="" class="item-product__image">
+                                       <a href="product.html" class="item-product__image">
                                           <picture>
                                              <source srcset="img/products/01.webp" type="image/webp"><img src="img/products/01.jpg" alt=""></picture>
                                        </a>
@@ -815,7 +815,7 @@
                      <div class="same-products__items  items-products">
                         <div class="items-products__column">
                            <div class="item-product">
-                              <a href="" class="item-product__image">
+                              <a href="product.html" class="item-product__image">
                                  <picture>
                                     <source srcset="img/products/001.webp" type="image/webp"><img src="img/products/001.jpg" alt=""></picture>
                               </a>
@@ -871,7 +871,7 @@
                         </div>
                         <div class="items-products__column">
                            <div class="item-product">
-                              <a href="" class="item-product__image">
+                              <a href="product.html" class="item-product__image">
                                  <picture>
                                     <source srcset="img/products/002.webp" type="image/webp"><img src="img/products/002.jpg" alt=""></picture>
                               </a>
@@ -922,7 +922,7 @@
                         </div>
                         <div class="items-products__column">
                            <div class="item-product">
-                              <a href="" class="item-product__image">
+                              <a href="product.html" class="item-product__image">
                                  <picture>
                                     <source srcset="img/products/001.webp" type="image/webp"><img src="img/products/001.jpg" alt=""></picture>
                               </a>
@@ -973,7 +973,7 @@
                         </div>
                         <div class="items-products__column">
                            <div class="item-product">
-                              <a href="" class="item-product__image">
+                              <a href="product.html" class="item-product__image">
                                  <picture>
                                     <source srcset="img/products/001.webp" type="image/webp"><img src="img/products/001.jpg" alt=""></picture>
                               </a>
@@ -1029,7 +1029,7 @@
                         </div>
                         <div class="items-products__column">
                            <div class="item-product">
-                              <a href="" class="item-product__image">
+                              <a href="product.html" class="item-product__image">
                                  <picture>
                                     <source srcset="img/products/002.webp" type="image/webp"><img src="img/products/002.jpg" alt=""></picture>
                               </a>
@@ -1080,7 +1080,7 @@
                         </div>
                         <div class="items-products__column">
                            <div class="item-product">
-                              <a href="" class="item-product__image">
+                              <a href="product.html" class="item-product__image">
                                  <picture>
                                     <source srcset="img/products/001.webp" type="image/webp"><img src="img/products/001.jpg" alt=""></picture>
                               </a>
