--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                                        <div class="item-product__labels">
                                           <div class="item-product__label">Товар дня</div>
                                        </div>
-                                       <a href="" class="item-product__image">
+                                       <a href="product.html" class="item-product__image">
                                           <picture>
                                              <source srcset="img/products/01.webp" type="image/webp"><img src="img/products/01.jpg" alt=""></picture>
                                        </a>
@@ -189,7 +189,7 @@
                                        <div class="item-product__labels">
                                           <div class="item-product__label">Товар дня</div>
                                        </div>
-                                       <a href="" class="item-product__image">
+                                       <a href="product.html" class="item-product__image">
                                           <picture>
                                              <source srcset="img/products/01.webp" type="image/webp"><img src="img/products/01.jpg" alt=""></picture>
                                        </a>
@@ -227,7 +227,7 @@
                                     <div class="item-product">
                                        <div class="item-product__labels">
                                        </div>
-                                       <a href="" class="item-product__image">
+                                       <a href="product.html" class="item-product__image">
                                           <picture>
                                              <source srcset="img/products/01.webp" type="image/webp"><img src="img/products/01.jpg" alt=""></picture>
                                        </a>
@@ -265,7 +265,7 @@
                                     <div class="item-product">
                                        <div class="item-product__labels">
                                        </div>
-                                       <a href="" class="item-product__image">
+                                       <a href="product.html" class="item-product__image">
                                           <picture>
                                              <source srcset="img/products/01.webp" type="image/webp"><img src="img/products/01.jpg" alt=""></picture>
                                        </a>
@@ -303,7 +303,7 @@
                                        <div class="item-product__labels">
                                           <div class="item-product__label">Товар дня</div>
                                        </div>
-                                       <a href="" class="item-product__image">
+                                       <a href="product.html" class="item-product__image">
                                           <picture>
                                              <source srcset="img/products/01.webp" type="image/webp"><img src="img/products/01.jpg" alt=""></picture>
                                        </a>
@@ -705,7 +705,7 @@
                            <div class="products-slide__items items-products">
                               <div class="items-products__column">
                                  <div class="item-product">
-                                    <a href="" class="item-product__image">
+                                    <a href="product.html" class="item-product__image">
                                        <picture>
                                           <source srcset="img/products/001.webp" type="image/webp"><img src="img/products/001.jpg" alt=""></picture>
                                     </a>
@@ -753,7 +753,7 @@
                               </div>
                               <div class="items-products__column">
                                  <div class="item-product">
-                                    <a href="" class="item-product__image">
+                                    <a href="product.html" class="item-product__image">
                                        <picture>
                                           <source srcset="img/products/002.webp" type="image/webp"><img src="img/products/002.jpg" alt=""></picture>
                                     </a>
@@ -801,7 +801,7 @@
                               </div>
                               <div class="items-products__column">
                                  <div class="item-product">
-                                    <a href="" class="item-product__image">
+                                    <a href="product.html" class="item-product__image">
                                        <picture>
                                           <source srcset="img/products/001.webp" type="image/webp"><img src="img/products/001.jpg" alt=""></picture>
                                     </a>
@@ -849,7 +849,7 @@
                               </div>
                               <div class="items-products__column">
                                  <div class="item-product">
-                                    <a href="" class="item-product__image">
+                                    <a href="product.html" class="item-product__image">
                                        <picture>
                                           <source srcset="img/products/01.webp" type="image/webp"><img src="img/products/01.jpg" alt=""></picture>
                                     </a>
@@ -897,7 +897,7 @@
                               </div>
                               <div class="items-products__column">
                                  <div class="item-product">
-                                    <a href="" class="item-product__image">
+                                    <a href="product.html" class="item-product__image">
                                        <picture>
                                           <source srcset="img/products/002.webp" type="image/webp"><img src="img/products/002.jpg" alt=""></picture>
                                     </a>
@@ -945,7 +945,7 @@
                               </div>
                               <div class="items-products__column">
                                  <div class="item-product">
-                                    <a href="" class="item-product__image">
+                                    <a href="product.html" class="item-product__image">
                                        <picture>
                                           <source srcset="img/products/002.webp" type="image/webp"><img src="img/products/002.jpg" alt=""></picture>
                                     </a>
@@ -997,7 +997,7 @@
                            <div class="products-slide__items items-products">
                               <div class="items-products__column">
                                  <div class="item-product">
-                                    <a href="" class="item-product__image">
+                                    <a href="product.html" class="item-product__image">
                                        <picture>
                                           <source srcset="img/products/001.webp" type="image/webp"><img src="img/products/001.jpg" alt=""></picture>
                                     </a>
@@ -1045,7 +1045,7 @@
                               </div>
                               <div class="items-products__column">
                                  <div class="item-product">
-                                    <a href="" class="item-product__image">
+                                    <a href="product.html" class="item-product__image">
                                        <picture>
                                           <source srcset="img/products/002.webp" type="image/webp"><img src="img/products/002.jpg" alt=""></picture>
                                     </a>
@@ -1093,7 +1093,7 @@
                               </div>
                               <div class="items-products__column">
                                  <div class="item-product">
-                                    <a href="" class="item-product__image">
+                                    <a href="product.html" class="item-product__image">
                                        <picture>
                                           <source srcset="img/products/001.webp" type="image/webp"><img src="img/products/001.jpg" alt=""></picture>
                                     </a>
@@ -1141,7 +1141,7 @@
                               </div>
                               <div class="items-products__column">
                                  <div class="item-product">
-                                    <a href="" class="item-product__image">
+                                    <a href="product.html" class="item-product__image">
                                        <picture>
                                           <source srcset="img/products/01.webp" type="image/webp"><img src="img/products/01.jpg" alt=""></picture>
                                     </a>
@@ -1189,7 +1189,7 @@
                               </div>
                               <div class="items-products__column">
                                  <div class="item-product">
-                                    <a href="" class="item-product__image">
+                                    <a href="product.html" class="item-product__image">
                                        <picture>
                                           <source srcset="img/products/002.webp" type="image/webp"><img src="img/products/002.jpg" alt=""></picture>
                                     </a>
@@ -1237,7 +1237,7 @@
                               </div>
                               <div class="items-products__column">
                                  <div class="item-product">
-                                    <a href="" class="item-product__image">
+                                    <a href="product.html" class="item-product__image">
                                        <picture>
                                           <source srcset="img/products/002.webp" type="image/webp"><img src="img/products/002.jpg" alt=""></picture>
                                     </a>
@@ -1289,7 +1289,7 @@
                            <div class="products-slide__items items-products">
                               <div class="items-products__column">
                                  <div class="item-product">
-                                    <a href="" class="item-product__image">
+                                    <a href="product.html" class="item-product__image">
                                        <picture>
                                           <source srcset="img/products/001.webp" type="image/webp"><img src="img/products/001.jpg" alt=""></picture>
                                     </a>
@@ -1337,7 +1337,7 @@
                               </div>
                               <div class="items-products__column">
                                  <div class="item-product">
-                                    <a href="" class="item-product__image">
+                                    <a href="product.html" class="item-product__image">
                                        <picture>
                                           <source srcset="img/products/002.webp" type="image/webp"><img src="img/products/002.jpg" alt=""></picture>
                                     </a>
@@ -1385,7 +1385,7 @@
                               </div>
                               <div class="items-products__column">
                                  <div class="item-product">
-                                    <a href="" class="item-product__image">
+                                    <a href="product.html" class="item-product__image">
                                        <picture>
                                           <source srcset="img/products/001.webp" type="image/webp"><img src="img/products/001.jpg" alt=""></picture>
                                     </a>
@@ -1433,7 +1433,7 @@
                               </div>
                               <div class="items-products__column">
                                  <div class="item-product">
-                                    <a href="" class="item-product__image">
+                                    <a href="product.html" class="item-product__image">
                                        <picture>
                                           <source srcset="img/products/01.webp" type="image/webp"><img src="img/products/01.jpg" alt=""></picture>
                                     </a>
@@ -1481,7 +1481,7 @@
                               </div>
                               <div class="items-products__column">
                                  <div class="item-product">
-                                    <a href="" class="item-product__image">
+                                    <a href="product.html" class="item-product__image">
                                        <picture>
                                           <source srcset="img/products/002.webp" type="image/webp"><img src="img/products/002.jpg" alt=""></picture>
                                     </a>
@@ -1529,7 +1529,7 @@
                               </div>
                               <div class="items-products__column">
                                  <div class="item-product">
-                                    <a href="" class="item-product__image">
+                                    <a href="product.html" class="item-product__image">
                                        <picture>
                                           <source srcset="img/products/002.webp" type="image/webp"><img src="img/products/002.jpg" alt=""></picture>
                                     </a>
@@ -1581,7 +1581,7 @@
                            <div class="products-slide__items items-products">
                               <div class="items-products__column">
                                  <div class="item-product">
-                                    <a href="" class="item-product__image">
+                                    <a href="product.html" class="item-product__image">
                                        <picture>
                                           <source srcset="img/products/001.webp" type="image/webp"><img src="img/products/001.jpg" alt=""></picture>
                                     </a>
@@ -1629,7 +1629,7 @@
                               </div>
                               <div class="items-products__column">
                                  <div class="item-product">
-                                    <a href="" class="item-product__image">
+                                    <a href="product.html" class="item-product__image">
                                        <picture>
                                           <source srcset="img/products/002.webp" type="image/webp"><img src="img/products/002.jpg" alt=""></picture>
                                     </a>
@@ -1677,7 +1677,7 @@
                               </div>
                               <div class="items-products__column">
                                  <div class="item-product">
-                                    <a href="" class="item-product__image">
+                                    <a href="product.html" class="item-product__image">
                                        <picture>
                                           <source srcset="img/products/001.webp" type="image/webp"><img src="img/products/001.jpg" alt=""></picture>
                                     </a>
@@ -1725,7 +1725,7 @@
                               </div>
                               <div class="items-products__column">
                                  <div class="item-product">
-                                    <a href="" class="item-product__image">
+                                    <a href="product.html" class="item-product__image">
                                        <picture>
                                           <source srcset="img/products/01.webp" type="image/webp"><img src="img/products/01.jpg" alt=""></picture>
                                     </a>
@@ -1773,7 +1773,7 @@
                               </div>
                               <div class="items-products__column">
                                  <div class="item-product">
-                                    <a href="" class="item-product__image">
+                                    <a href="product.html" class="item-product__image">
                                        <picture>
                                           <source srcset="img/products/002.webp" type="image/webp"><img src="img/products/002.jpg" alt=""></picture>
                                     </a>
@@ -1821,7 +1821,7 @@
                               </div>
                               <div class="items-products__column">
                                  <div class="item-product">
-                                    <a href="" class="item-product__image">
+                                    <a href="product.html" class="item-product__image">
                                        <picture>
                                           <source srcset="img/products/002.webp" type="image/webp"><img src="img/products/002.jpg" alt=""></picture>
                                     </a>
